oxiplate-derive/tests/broken/derive/attribute-typo.stderr
error: proc-macro derive panicked
 --> tests/broken/derive/attribute-typo.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: not implemented: Must specify an attribute

error: cannot find attribute `oxiplatee` in this scope
 --> tests/broken/derive/attribute-typo.rs:4:3
  |
4 | #[oxiplatee = ""]
  |   ^^^^^^^^^ help: a derive helper attribute with a similar name exists: `oxiplate`
