oxiplate-derive/tests/broken/derive/attribute-typo.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplatee = ""]
struct Data;

fn main() {}
